welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
  if( day<5 && !vacation){return "7:00"}
  if( 4<day && !vacation){return "10:00"}
  if( day<5 && vacation){return "10:00"}
  if( 4<day && vacation){return "off"}
}